...
"action.title.save.bookmark" = "Add Bookmark";

/* Add to Favorites action */
"action.title.save.favorite" = "Add Favorite";

/* Settings action */
"action.title.settings" = "Settings";

/* Share action */
"action.title.share" = "Share";

/* New tab menu item opening a new tab */
"action.title.tab.new" = "New Tab";

/* Settings label for bottom position for the address bar */
"address.bar.bottom" = "Bottom";

/* Settings label for top position for the address bar */
"address.bar.top" = "Top";
...
"data.import.passwords.title" = "Import Passwords to DuckDuckGo";

/* Data import summary of how many bookmarks were successfully imported. */
"data.import.summary.bookmarks.success" = "Bookmarks";

/* Title of button to dismiss the screen */
"data.import.summary.button.title.done" = "Done";

/* Title of button to prompt users to sync and back up their imported data. Reads as 'Sync & Back Up Passwords | Bookmarks | Data' depending on what the user has chosen to import */
"data.import.summary.button.title.sync" = "Sync & Back Up %@";

/* Parameter for autofill.import.passwords.complete.button.title.sync */
"data.import.summary.button.title.sync.bookmarks" = "Bookmarks";
...
"keyCommandAddBookmark" = "Add Bookmark";

/* No comment provided by engineer. */
"keyCommandAddFavorite" = "Add Favorite";

/* No comment provided by engineer. */
"keyCommandBrowserBack" = "Browse Back";

/* No comment provided by engineer. */
"keyCommandBrowserForward" = "Browse Forward";

/* No comment provided by engineer. */
"keyCommandClose" = "Close";
...
"tab.select.all" = "Select All";

/* Deselect all tabs */
"tab.select.none" = "Deselect All";

/* Tab Switcher Accessibility Label */
"tab.switcher.accessibility.label" = "Tab Switcher";

/* Bookmark all tabs menu item */
"tab.switcher.bookmarkAll" = "Bookmark All Tabs";

/* Description text for the text size adjustment setting */
"textSize.description" = "Increase or decrease text size across all sites.";
...
