...
        }
    }

    // MARK: - Logic when closing a tab

    /// When closing an active tab, the following rules will be used to find the appropriate tab to activate. Rules will be evaluated top to bottom and evaluation stops once a tab has been found:
    /// 1. If this tab has a parent (i.e. has been opened via "Open In New Tab"):
    ///     a. Try to find the next tab with the same parent tab
    ///     b. Try to find the previous tab with the same parent tab
    ///     c. Try to find the parent tab
    /// 2. Try to find the next tab that has the closing tab as it's parent
    /// 3. Try to find the previous tab that has the closing tab as it's parent
    /// 4. Try to find the previously active tab.
...
