...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Done"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
...
            "value" : "Weiter"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Next"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Siguiente"
...
            "value" : "Einfügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Paste"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pegar"
...
            "value" : "Synchronisierung beginnen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Begin Syncing"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Iniciar sincronización"
...
            "value" : "Synchronisierte Daten wiederherstellen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Recover Synced Data"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recuperar datos sincronizados"
...
            "value" : "Los geht's!"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Get Started"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empezar"
...
            "value" : "Synchronisieren und sichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Sync & Backup"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sincronización y copia de seguridad"
...
            "value" : "Synchronisierung aktiviert"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Sync Enabled"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sincronización activada"
...
