appId: com.duckduckgo.mobile.ios
---

#Open Debug Menu
- runFlow:
    file: ./open_debug_menu.yaml

- scrollUntilVisible:
    element:
      id: "Settings.Debug.InternalUser.identifier"
- tapOn:
    id: "Settings.Debug.InternalUser.identifier"
- tapOn: Settings
- tapOn: Done
- tapOn: Browsing menu
- tapOn: Settings