appId: com.duckduckgo.mobile.ios
---

- assertVisible: Sync & Backup
- tapOn: Sync & Backup
- assertVisible: Begin Syncing
- assertVisible: Recover Synced Data
- tapOn: Recover Synced Data
- inputText: "0000"
- pressKey: Enter
- assertVisible: Get Started
- tapOn: Get Started
- runFlow:
    when:
      visible: Allows you to upload photographs and videos
    commands:
        - tapOn: "Allow"
- tapOn: Enter Text Code Manually
- tapOn: Paste
- assertVisible: Save Recovery Code
- tapOn: Next
- assertVisible: Your Data is Synced!
- tapOn: Done
- assertVisible: Sync Enabled